--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,15 @@
 <head>
   <title>Punch-O-Meter</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+  <meta name="viewport"
+        content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <meta name="description" content="Punch-O-Meter">
   <meta name="theme-color" content="#0071c5">
   <!-- Origin Trial Token, feature = Generic Sensors, origin = https://intel.github.io, expires = 2018-02-27 -->
-  <meta http-equiv="origin-trial" data-feature="Generic Sensors" data-expires="2018-02-27" content="AjL+UlBzLjx+0FPXrML6IMA/Ax9GsO/7rUvV/aaKkh3KknUSwDBgymn0d3NhGeRMNS7FlYD73ernqvZNoqzNMw4AAABWeyJvcmlnaW4iOiJodHRwczovL2ludGVsLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiR2VuZXJpY1NlbnNvciIsImV4cGlyeSI6MTUxOTczOTAwNX0=">
+  <meta http-equiv="origin-trial"
+        data-feature="Generic Sensors"
+        data-expires="2018-02-27"
+        content="AjL+UlBzLjx+0FPXrML6IMA/Ax9GsO/7rUvV/aaKkh3KknUSwDBgymn0d3NhGeRMNS7FlYD73ernqvZNoqzNMw4AAABWeyJvcmlnaW4iOiJodHRwczovL2ludGVsLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiR2VuZXJpY1NlbnNvciIsImV4cGlyeSI6MTUxOTczOTAwNX0=">
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" sizes="192x192" href="images/app-icon-192.png">
@@ -16,12 +20,12 @@
 </head>
 
 <body>
-  <div class="container" align="center">
+  <div class="container" align="center" style="width:100%;">
       <div id="game_text">
             Shake device and find out!
       </div>
-      <div id="measurement">
-          <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+      <div id="measurement" style="width:100%;">
+          <canvas id="myChart" style="width:100%;"></canvas>
       </div>
       <div>
           <button id="start">Start</button>
