--- a/src/index.html
+++ b/src/index.html
@@ -15,23 +15,36 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" sizes="192x192" href="images/hands.jpeg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="main.js"></script>
 </head>
 
 <body>
   <div class="container" align="center" style="width:100%;">
-      <div id="game_text">
+      <div class="row">
+          <div class="col"><h2>Tremor PWA</h2></div>
+      </div>
+      <div class="row">
+          <div id="game_text" class="col">
             Shake device and find out!
+          </div>
       </div>
-      <div id="measurement" style="width:100%;">
-          <canvas id="myChart" style="width:100%;"></canvas>
+      <div class="row">
+          <div id="measurement" class="col">
+              <canvas id="myChart" style="width:100%;"></canvas>
+          </div>
       </div>
-      <div>
-          <button id="start">Start</button>
-          <button id="stop">Stop</button>
+      <div class="row">
+          <div id="start" class="col">Start</div>
+          <div id="stop" class="col">Stop</div>
       </div>
   </div>
+  <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+          crossorigin="anonymous"></script>
   <script>
     // Service worker
     if ('serviceWorker' in navigator) {
@@ -43,6 +56,7 @@
                     });
             });
     }
+
     main();
   </script>
 </body>
