added pause and button clear

--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,17 @@
       </div>
       <div class="row">
           <div id="measurement" class="col">
-              <canvas id="myChart" style="width:100%;"></canvas>
+              <canvas id="chartAxis" style="width:100%;"></canvas>
+              <canvas id="chartMod" style="width:100%;"></canvas>
           </div>
       </div>
       <div class="row">
-          <div id="start" class="col">Start</div>
-          <div id="stop" class="col">Stop</div>
+          <div class="col">
+              <button id="start" type="button" class="btn btn-success">Start</button>
+          </div>
+          <div class="col">
+              <button id="clear" type="button" class="btn btn-light">clear</button>
+          </div>
       </div>
   </div>
   <script
