--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,11 @@
         <button id="clear" type="button" class="btn btn-light">Clear</button>
     </div>
   </div>
+    <div class="row">
+    <div class="col-md-12">
+      <hr>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-12">
       <ul class="nav nav-tabs custom_tab_style1" id="myTab" role="tablist">
