--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
         <div class="tab-pane fade show active" id="Results" role="tabpanel" aria-labelledby="home-tab">
           <div class="row">
             <div id="game_text" class="col-md-12">
-              Shake device and find out!
+
             </div>
           </div>
           <div class="row">
@@ -121,9 +121,9 @@
         <div class="tab-pane fade" id="Curves" role="tabpanel" aria-labelledby="curves-tab">
           <div class="row">
             <div id="measurement" class="col-md-12">
-              <canvas id="chartx" style="width:100%;"></canvas>
-              <canvas id="charty" style="width:100%;"></canvas>
-              <canvas id="chartz" style="width:100%;"></canvas>
+              <canvas id="charta" style="width:100%;"></canvas>
+              <canvas id="chartv" style="width:100%;"></canvas>
+              <canvas id="chartl" style="width:100%;"></canvas>
             </div>
           </div>
         </div>
