--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,12 @@
         content="width=device-width, minimum-scale=1">
   <meta name="description" content="Tremor PWA">
   <meta name="theme-color" content="#0071c5">
-  <!-- Origin Trial Token, feature = Generic Sensors, origin = https://intel.github.io, expires = 2018-02-27 -->
-  <meta http-equiv="origin-trial"
-        data-feature="Generic Sensors"
-        data-expires="2018-02-27"
-        content="AjL+UlBzLjx+0FPXrML6IMA/Ax9GsO/7rUvV/aaKkh3KknUSwDBgymn0d3NhGeRMNS7FlYD73ernqvZNoqzNMw4AAABWeyJvcmlnaW4iOiJodHRwczovL2ludGVsLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiR2VuZXJpY1NlbnNvciIsImV4cGlyeSI6MTUxOTczOTAwNX0=">
   <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" sizes="192x192" href="static/images/hands.jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
 
@@ -35,7 +29,11 @@
         <button id="clear" type="button" class="btn btn-light">Clear</button>
     </div>
   </div>
-    <div class="row">
+  <div class="row">
+    <div id="game_text" class="col-md-12">
+    </div>
+  </div>
+  <div class="row">
     <div class="col-md-12">
       <hr>
     </div>
@@ -79,11 +77,7 @@
       </ul>
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="Results" role="tabpanel" aria-labelledby="home-tab">
-          <div class="row">
-            <div id="game_text" class="col-md-12">
 
-            </div>
-          </div>
           <div class="row">
             <div id="resax" style="width:33%;" >
             </div>
@@ -112,9 +106,9 @@
         <div class="tab-pane fade" id="FFT" role="tabpanel" aria-labelledby="fft-tab">
           <div class="row">
               <div id="fft_charts" class="col-md-12">
-                  <canvas id="fftx" style="width:100%;"></canvas>
-                  <canvas id="ffty" style="width:100%;"></canvas>
-                  <canvas id="fftz" style="width:100%;"></canvas>
+                  <canvas id="ffta" style="width:100%;"></canvas>
+                  <canvas id="fftv" style="width:100%;"></canvas>
+                  <canvas id="fftl" style="width:100%;"></canvas>
               </div>
           </div>
         </div>
